mac: Fix flickering of install extension window.

Changing properties of an NSWindow can synchronously affect the display. Hide
the window before it is added to the NSWindow hierarchy. Then animate it in when
it is already in the correct location.

BUG=595239

Review URL: https://codereview.chromium.org/1862793003

Cr-Commit-Position: refs/heads/master@{#385425}

Former-commit-id: fce13c0eee832c68383fed90c9e01ee22fd893ad